added the game memory
many modifications still need to be done

--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     </header>
     <div id="launcher">
         <button onclick="location.href='tic-tac-toe.html'">
-            <img src="TTT2.png" alt="Tic-Tac-Toe">
+            <img src="TTT.png" alt="Tic-Tac-Toe">
             Play Tic-Tac-Toe
         </button>
         <button onclick="location.href='rsp.html'">
