--- a/memory.html
+++ b/memory.html
@@ -12,7 +12,7 @@
 	<div class="grid-container">
 	</div>
 	<p>Score: <span class="score"></span></p>
-	<div class="actions">
+	<div class="action">
 		<button onclick="restart()">Restart</button>
 	</div>
 	<script src="memory.js"></script>
