--- a/about.html
+++ b/about.html
@@ -1,1 +1,23 @@
-jhjhjj
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="about.css">
+	<title>About Us!</title>
+	<!-- for the home icon -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"> 
+</head>
+<body>
+	<button class="home" onclick="location.href='game.html'"><i class="fas fa-house"></i></button>
+	<div id="ritej" onclick="location.href='./CV_Ritej/CV.html'">
+		Ritej Ayed
+	</div>
+	<div id="rania" onclick="location.href='./CV_Rania/page2.html'">
+		Rania Baha
+	</div>
+	<div id="wissal" onclick="location.href='./CV_Wissal/cvW.html'">
+		Wissal Mellak
+	</div>
+</body>
+</html>
