--- a/rsp.html
+++ b/rsp.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> <!-- Declares the document type as HTML -->
 <html lang="en"> <!-- Root element with English language -->
 <head> <!-- Container for metadata and doc info -->
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="rsp.css"> <!-- Links to the external CSS file -->
 </head>
 <body> <!-- Contains the visible content of the webpage -->
-    <div class="stars"></div> <!-- Element for the starry background effect -->
+    <div class="stars"></div> <!-- Element for the starry background -->
     
     <header> <!-- Header section of the page -->
         <div class="logo-container"> <!-- Container for the game logo -->
